cumulative update (see below for more info)
- Reorganized jargyle-test-help with separate packages
- Resource constructor takes in a Class whose ClassLoader is used to obtain the Java resource
- Resource.getFile() is replaced with Resource.getInputStream()
- Resource constants for key store files and key store password files to be used everywhere are in class TestKeyStoreResourceConstants
- Moved and documented MeasuredIoHelper from jargyle-integration-test to jargyle-test-help
- Added empty test string for all tests to test
- Fixed MeasuredIoHelper to correctly handle zero byte input
- GSS-API (Kerberos) code for testing in jargyle-test-help
- Simplified GssSocket.GssUnwrappedInputStream and GssSocket.GssWrappedOutputStream
- Unit test cases for GssapiMethodEncapsulation, GssDatagramSocket, GssSocket
- Added integration tests involving GSS-API method with negotiated protection level SELECTIVE_INTEG_OR_CONF
- Charsets of strings sent as bytes over the network in testing are specified as UTF-8
- The ports of the DatagramEchoServer and the EchoServer are required to be provided
- The ports of the DatagramEchoServer and the EchoServer are required to be provided in DatagramEchoClient.echo(String, int) and EchoClient.echo(String, int) respectively
- jargyle-test-help, jargyle-integration-test, and jargyle-performance-test are back to having automatic module names (They are no longer defined as Java modules)
- InputStreams can be provided for SSL/TLS/DTLS key stores and trust stores for client and server
- Reordered statements in close() in extended Socket classes to have underlying Sockets closed first
- All ports in integration tests are provided by the system (with the exception of the ports for the Kerberos testing environment)
- Edited Frequently Used Maven Commands in README.md for clarity